# bomberman_rl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  Todo.md  agents.py  environment.py  environment.yml  events.py  fallbacks.py  items.py  main.py  play  pyproject.toml  replay.py  requirements.txt  run.sh  settings-original.py  settings.py  statistics.py  test.ipynb  test.py  training_scheduler.py
.github/workflows/: pipeline.yml  pylint.yml
agent_code/agent_info/: Untitled.ipynb  callbacks.py  model.pt  model.py  train.py  utils.py
agent_code/auto_bomber/: auto_bomber_config.py  auto_bomber_weights.pt  callbacks.py  custom_events.py  default_hyper_parameters.json  feature_engineering.py  model.py  model_path.py  requirements.txt  test_model.py  test_transitions.py  train.py  transitions.py  utils.py
agent_code/coarse_life-threatening/: callbacks.py  train.py
agent_code/coin_collector_agent/: callbacks.py
agent_code/coli_agent/: callbacks.py  indexed_state_list.csv  indexed_state_list.txt  q_table-2022-03-10T12:27:52.npy  q_table-2022-03-11T15:56:53.npy  q_table-2022-03-11T15:58:43.npy  q_table-2022-03-11T16:03:50.npy  q_table-2022-03-11T16:08:54.npy  q_table-2022-03-11T16:32:41.npy  q_table-2022-03-11T16:36:29.npy  q_table-2022-03-12T22:40:41.npy  q_table-2022-03-12T22:46:03.npy  q_table-2022-03-13T12:24:09.npy  q_table-2022-03-13T12:30:34.npy  q_table-2022-03-13T13:57:21.npy  q_table-2022-03-13T14:31:02.npy  q_table-2022-03-13T14:34:50.npy  q_table-2022-03-14T11:06:02.npy  q_table-2022-03-14T11:48:37.npy  q_table-2022-03-14T12:45:26.npy  q_table-2022-03-14T12:54:24.npy  q_table-2022-03-14T162802-node45.npy  q_table-2022-03-14T18:16:26.npy  q_table-2022-03-14T18:16:50.npy  q_table-2022-03-14T18:18:18.npy  q_table-2022-03-14T18:24:11.npy  q_table-2022-03-14T18:28:58.npy  (+4 more)
train_scripts/: coins_only.sh
(+353 files in other folders)
