[tool.poetry]
name = "bomberman_rl"
version = "0.1.0"
description = "Pack"
authors = ["Aileen Reichelt", "Ivo Schaper", "Kieu Trang Nguyen Vu"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.22.2"
pygame = "^2.1.2"
tqdm = "^4.63.0"
scipy = "^1.8.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
