[tool.poetry]
name = "bomberman_rl"
version = "0.1.0"
description = "Pack"
authors = ["Aileen Reichelt", "Ivo Schaper", "Kieu Trang Nguyen Vu"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.22.2"
pygame = "^2.1.2"
tqdm = "^4.63.0"
scipy = "^1.8.0"
sklearn = "^0.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
black = "^21.10b0"
pylint = "^2.11.1"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
